# nalssi

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
app/: config.py  database.py  logging_config.py  main.py  server.py  templating.py
app/api/: deps.py
app/api/routes/: __init__.py  backends.py  weather.py  ws.py
app/api/routes/pages/: alerts.py  backends.py  (+4 more)
app/core/: utils.py
app/migrations/: env.py
app/migrations/versions/: 82328944302f_initial_schema_with_datetime_fields.py  8400b2312556_add_cap_fields_to_alerts_table.py  d9c7cf59c3d4_add_forecasts_table.py
app/models/: __init__.py  alert.py  backend_config.py  forecast.py  location.py  weather.py
app/schemas/: __init__.py  backend_config.py  location.py  weather.py
app/services/: broadcast.py  scheduler.py
app/services/collectors/: weather_collector.py
app/services/outputs/: base.py  influxdb_backend.py  manager.py  redis_backend.py
app/services/weather_apis/: base.py  noaa.py  open_meteo.py  openweather.py
app/templates/: _weather_icon.html  base.html  dashboard.html
app/templates/alerts/: _card.html  _content.html  _list_content.html  list.html
app/templates/backends/: _add_form.html  _form.html  _row.html  list.html
app/templates/dashboard/: _card.html  _content.html
app/templates/forecast/: _content.html  _period_card.html  list.html
app/templates/locations/: _add_form.html  _row.html  list.html
app/templates/system/: _collections.html  _content.html  _stats.html  status.html
backend/: .dockerignore  .gitignore  README.md  test_persistence.py
backend/app/: config.py  logging_config.py  main.py  templating.py
backend/app/models/: backend_config.py
backend/app/templates/: _alert_badge.html  _messages.html  base.html  dashboard.html
backend/tests/fixtures/: open_meteo_responses.json
backend/tests/unit/: test_models.py  test_utils.py
scripts/: fake_alerts.py
tests/: conftest.py
tests/fixtures/: noaa_responses.json  open_meteo_responses.json  openweather_responses.json
tests/integration/: test_api_endpoints.py  test_postgres.py  test_websocket.py
tests/unit/: test_broadcast.py  test_config.py  test_templating.py  test_weather_collector.py
tests/unit/test_outputs/: test_alert_priorities.py  test_influxdb_backend.py  test_kurokku_format.py  test_output_manager.py  test_redis_backend.py
tests/unit/test_weather_apis/: test_noaa_client.py  test_open_meteo_client.py  test_openweather_client.py
(+30 files in other folders)
